--- a/package.json
+++ b/package.json
@@ -39,23 +39,27 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@stripe/react-stripe-js": "5.4.0",
     "@vercel/analytics": "1.3.1",
+    "carousel": "^0.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "geist": "^1.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "^19.2.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
+    "react-slick": "^0.31.0",
     "recharts": "2.15.4",
-    "roboto": "^0.8.2",
+    "roboto": "^0.2.1",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
